ajout de l'anglais agile &co

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ h4, h5, h6 {
 }
 
 h1 {
-  font-size: 2.5em;
+  font-size: 2em;
   text-align:center;
 }
 
@@ -158,11 +158,10 @@ Professionnel IT avec plus de 15 ans d’expérience en développement logiciel 
 <h3>Outils de mesure :</h3> Centreon, Zabbix, Munin, Checkmk, grafana ...
 
 <h2>Divers</h2>
-<ul>
-<li>RQTH</li>
-<li>Sauveteur secouriste du travail</li>
-<li>Mobile – Permis B</li>
-</ul>
+- Anglais Courant,
+<br>- RQTH,
+<br>- Sauveteur secouriste du travail,
+<br>- Mobile – Permis B.
 
 </td>
 <td style='background:#ffffe0'>
@@ -178,17 +177,15 @@ Développement de l'esprit d'équipe.
 
 <br><h3>Développement - Freelance : 5 ans </h3>
 Multi-clients : Telcos, Banque, FAI, web agency, publicité en ligne ...
-Environnements, variés (linux, windows, BSD, AIX ... Python, Perl, bash, PHP, C#, C++, C ...). Pratique des réponses fonctionnelles et techniques.
+Environnements, variés (linux, windows, BSD, AIX ... Python, Perl, bash, PHP, C#, C++, C ...). Pratique des réponses fonctionnelles et techniques. Méthodologies agiles, cycle en V, iso 9001.
 <br>
 Développement de l'autonomie et de la rigueur.
 <h3>Telcos/FAI : 4 ans</h3>
 Rédaction de cahier de diagnostic, mise en place de files de tri et traitement des tickets d'incidents. Gestion des relations avec le RIPE. Remontées d'indicateurs pour les NOC.
 <h2>Portfolio</h2>
 - <a href=https://pypi.org/user/julien.tayon/>Mes paquets python maintenus sur pypi</a><br>
-- <a href=https://jul.github.io/cv/demo.html>Une démo HTML/JS/CSS d'un de mes outils de recueil de mesure léger</a>
-
-
-
+- <a href=https://jul.github.io/cv/demo.html>Une démo HTML/JS/CSS d'un de mes outils de recueil de mesure léger</a><br>
+- <a href=https://archive.fosdem.org/2017/schedule/event/python_duck_typing/>Présentation FOSDEM thème python 2017</a>
 
 
 <h2>Formation</h2>
