ajout du favicon

--- a/index.html
+++ b/index.html
@@ -121,6 +121,8 @@ hr {
   padding: 0;
 
 </style>
+<link rel="apple-touch-icon" href="apple-touch-icon.png" />
+    <link rel="shortcut icon" href="favicon.png" />
 </head>
 <body>
 <div class=center >
