--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ Professionnel IT avec plus de 15 ans d’expérience en développement logiciel 
 <h3>Langages :</h3> Python, Bash, javascript, HTML, CSS, C#, C, VHDL ...
 <h3>Développement :</h3> FastAPI, Django, openEDX, pylons, flask, numpy, matplotlib, pandas ...
 <h3>Automatisation :</h3> CI/CD, git, jenkins, gitlab ...
-<h3>Réseaux &amp; sécurité :</h3> DHCP, LDAP, DNS, VPN, PKI, sauvegardes, droits d’accès, VoIP, UPD, MQTT ...
+<h3>Réseaux &amp; sécurité :</h3> DHCP, LDAP, DNS, VPN, PKI, sauvegardes, droits d’accès, VoIP, UPD, MQTT, SNMP ...
 <h3>Outils de mesure :</h3> Centreon, Zabbix, Munin, Checkmk, grafana ...
 
 <h2>Divers</h2>
